Added cd-command in run-tests.yml

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -42,4 +42,5 @@ jobs:
         flake8 .
     - name: Run the tests
       run: |
+        cd exercise/
         python manage.py test tests/ --noinput
